# NPU-Monitor

./: CMakeLists.txt
include/: dcmi_interface_api.h  npu_collector.h  npu_impl.h  npu_metrics.h
src/: npu_iml.cpp  npu_impl.cpp
test/: test.c  test_npu_collector.cpp  test_npu_impl.cpp
